<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@drawable/border_shadow_radius">

        <LinearLayout
            android:id="@+id/blur_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimen_20dp"
            android:background="@drawable/border_shadow_radius"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dimen_10dp"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/UserLL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"

                android:background="@color/trans"
                android:gravity="center"
                android:orientation="vertical"

                android:paddingBottom="@dimen/dimen_10dp"

                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:background="@color/trans"

                    >

                    <TextView
                        android:id="@+id/headerText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_10dp"
                        android:background="@color/trans"
                        android:ellipsize="end"
                        android:padding="@dimen/dimen_5dp"
                        android:singleLine="true"
                        android:text="Add User"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        tools:ignore="RtlSymmetry" />

                </LinearLayout>

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/email_prompt"
                    android:layout_marginTop="5dp"
                    android:autofillHints=""
                    android:background="@drawable/borde_radius"
                    android:hint="@string/first_name"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="12sp"
                    tools:ignore="ObsoleteLayoutParam" />

                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/email_prompt"
                    android:layout_marginTop="5dp"
                    android:autofillHints=""
                    android:background="@drawable/borde_radius"
                    android:hint="@string/last_name"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="12sp"
                    tools:ignore="ObsoleteLayoutParam" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/email_prompt"
                    android:layout_marginTop="5dp"
                    android:autofillHints=""
                    android:background="@drawable/borde_radius"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="12sp"
                    tools:ignore="ObsoleteLayoutParam" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/Cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel" />

                    <Button
                        android:id="@+id/Save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_20dp"
                        android:text="@string/save" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</layout>