<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/app_background_color"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/outer_wrap"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/login_view"
                        android:visibility="visible">

                        <LinearLayout
                            android:id="@+id/body_block"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_gravity="center"
                            android:paddingBottom="@dimen/dimen_10dp">


                            <LinearLayout
                                android:id="@+id/form_block"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="50dp"
                                android:layout_marginRight="50dp"
                                android:orientation="vertical">


                                <TextView
                                    android:id="@+id/view_title"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="40dp"
                                    android:layout_marginBottom="60dp"
                                    android:layout_weight="1"
                                    android:singleLine="true"
                                    android:text="@string/login"
                                    android:textAlignment="center"
                                    android:textColor="@color/white"
                                    android:textSize="35sp"

                                    />


                                <TextView
                                    android:id="@+id/email_prompt"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:singleLine="true"
                                    android:text="@string/prompt_email"
                                    android:textColor="@color/white"
                                    android:textSize="15sp" />

                                <EditText
                                    android:id="@+id/email"
                                    android:layout_width="match_parent"
                                    android:layout_height="40dp"
                                    android:layout_below="@+id/email_prompt"
                                    android:layout_marginTop="5dp"
                                    android:background="@drawable/borde_radius"
                                    android:inputType="textEmailAddress"
                                    android:paddingStart="10dp"
                                    android:selectAllOnFocus="true"
                                    android:textColor="@color/white"
                                    android:textColorHint="@color/white"
                                    android:textSize="12sp"
                                    tools:ignore="ObsoleteLayoutParam"
                                    android:autofillHints="" />

                                <TextView
                                    android:id="@+id/password_prompt"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/username"
                                    android:layout_marginTop="15dp"
                                    android:layout_weight="1"
                                    android:singleLine="true"
                                    android:text="@string/prompt_password"
                                    android:textColor="@color/white"
                                    android:textSize="15sp"
                                    tools:ignore="ObsoleteLayoutParam" />


                                <EditText
                                    android:id="@+id/password"
                                    android:layout_width="match_parent"
                                    android:layout_height="40dp"
                                    android:layout_below="@+id/password_prompt"
                                    android:layout_marginTop="5dp"
                                    android:background="@drawable/borde_radius"
                                    android:ellipsize="start"
                                    android:imeOptions="actionDone"
                                    android:inputType="textPassword"
                                    android:paddingLeft="10dp"
                                    android:selectAllOnFocus="true"

                                    android:textColor="@color/white"
                                    android:textColorHint="@color/white"
                                    android:textSize="12sp"
                                    android:autofillHints="" />


                                <Button
                                    android:id="@+id/loginbutton"
                                    style="@style/Widget.AppCompat.Button.Borderless"
                                    android:layout_width="match_parent"
                                    android:layout_height="40dp"
                                    android:layout_marginTop="25dp"
                                    android:background="@drawable/login_button_background"

                                    android:gravity="center"
                                    android:paddingStart="30dp"
                                    android:paddingTop="6dp"
                                    android:paddingEnd="15dp"
                                    android:text="@string/login_in"
                                    android:textAlignment="center"
                                    android:textColor="@color/white"


                                    android:textStyle="normal" />



                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_marginLeft="50dp"
                                android:layout_marginRight="50dp"
                                android:layout_marginTop="@dimen/dimen_20dp">
                                <TextView android:id="@+id/previous_user"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="20sp"
                                    android:textAlignment="center"
                                    android:text=""
                                    android:textColor="@color/white"
                                    android:visibility="visible"
                                    android:layout_marginTop="@dimen/dimen_20dp"/>
                            </LinearLayout>



                        </LinearLayout>

                    </ScrollView>

                </FrameLayout>
            </LinearLayout>


        </LinearLayout>


    </FrameLayout>
</layout>